# DPSecAggPipeline

./: README.md
SecureAggegationServer/: AESHelper.cpp  AESHelper.h  Base64Helper.cpp  Base64Helper.h  EcDiffieHellmanHelper.cpp  EcDiffieHellmanHelper.h  HararyHelper.cpp  HararyHelper.h  HyperGeometricHelper.cpp  HyperGeometricHelper.h  Mobile Secure Aggregation.vcxproj  Mobile Secure Aggregation.vcxproj.filters  PrgHelper.cpp  PrgHelper.h  SecureAggregationServer.sln  Sha2Helper.h  ShamirSecretSharingHelper.cpp  ShamirSecretSharingHelper.h  SocketServer.cpp  SocketServer.h  boost.props  main.cpp
app/: build.gradle  local.properties  settings.gradle
app/app/: build.gradle
app/app/src/androidTest/java/com/example/database_test/: ExampleInstrumentedTest.java
app/app/src/main/: AndroidManifest.xml
app/app/src/main/assets/: sample.csv
app/app/src/main/cpp/: CMakeLists.txt  Wrapper.cpp  azure-pipelines.yml
app/app/src/main/cpp/cmake/: CMakeAutoGen.cmake  CMakeAutoGenScript.cmake  ClipMode.cmake  FindFLAC.cmake  FindOgg.cmake  FindOpus.cmake  FindSQLite3.cmake  FindSndio.cmake  FindSpeex.cmake  FindVorbis.cmake  FindVorbisEnc.cmake  SndFileChecks.cmake  TestInline.cmake  TestLargeFiles.cmake
app/app/src/main/cpp/src/: aiff.c  alac.c  alaw.c  au.c  audio_detect.c  avr.c  broadcast.c  caf.c  cart.c  chanmap.c  chanmap.h  chunk.c  command.c  common.c  common.h  dither.c  double64.c  dwd.c  dwvw.c  file_io.c  flac.c  float32.c  g72x.c  gsm610.c  htk.c  id3.c  ima_adpcm.c  ima_oki_adpcm.c  ima_oki_adpcm.h  interleave.c  ircam.c  macos.c  mat4.c  mat5.c  mpc2k.c  ms_adpcm.c  new.c  nist.c  nms_adpcm.c  ogg.c  (+49 more)
app/app/src/main/cpp/src/ALAC/: ALACAudioTypes.h  ALACBitUtilities.c  ALACBitUtilities.h  ALACDecoder.h  ALACEncoder.h  EndianPortable.h  ag_dec.c  ag_enc.c  aglib.h  alac_codec.h  alac_decoder.c  alac_decoder.h  alac_encoder.c  dp_dec.c  dp_enc.c  dplib.h  matrix_dec.c  matrix_enc.c  matrixlib.h  shift.h
app/app/src/main/cpp/src/G72x/: g721.c  g723_16.c  g723_24.c  g723_40.c  g72x.c  g72x.h  g72x_priv.h  g72x_test.c
app/app/src/main/cpp/src/GSM610/: add.c  code.c  config.h  decode.c  gsm.h  gsm610_priv.h  gsm_create.c  gsm_decode.c  gsm_destroy.c  gsm_encode.c  gsm_option.c  long_term.c  lpc.c  preprocess.c  rpe.c  short_term.c  table.c
app/app/src/main/java/com/example/database_test/: MainActivity.java  ScanResultsAdapter.java
app/app/src/main/java/com/example/database_test/audioclassify/: AcousticSceneClassification.kt  Classifier.kt  Preprocessing.java  Utils.kt  converter.java
app/app/src/main/java/com/example/database_test/audiorecorder/: RecordingReceiver.kt  RecordingService.kt  StartService.kt
app/app/src/main/java/com/example/database_test/clustering/: DataSet.java  DatabaseReader.java  KMeans.java
app/app/src/main/java/com/example/database_test/gmsreadout/: ActivityContactDB.java  ContactDB.java  ContactRecords.proto  ContactRecordsProtos.java  GMSContactDB.java  RpiKey.java  Sudo.java  Utils.java
app/app/src/main/java/com/example/database_test/motiondetection/: Constants.java  DetectedActivitiesIntentService.java  MDUtils.java
app/app/src/main/res/layout/: activity_main.xml  fragment_first.xml
app/app/src/main/res/menu/: menu_main.xml
app/app/src/main/res/navigation/: nav_graph.xml
app/app/src/main/res/values/: colors.xml  strings.xml
app/app/src/test/java/com/example/database_test/: ExampleUnitTest.java
app/gradle/wrapper/: gradle-wrapper.properties
app_extensions/: MainActivity.java
app_extensions/cpp/: CMakeLists.txt  native-lib.cpp
asc-dl-pipeline/listener/: gen_data.py  main.py  main_backup.py  tofile.py
asc-dl-pipeline/webserver/: index.js  package-lock.json  package.json  start.sh  stop.sh
asc-dl-pipeline/webserver/react-web/: package-lock.json  package.json
asc-dl-pipeline/webserver/react-web/public/: index.html  manifest.json
asc-dl-pipeline/webserver/react-web/src/: App.js
asc-dl-pipeline/webserver/react-web/src/components/: Graph.js  PhoneLog.js
asc-dl-pipeline/webserver/react-web/src/hooks/: useData.js  useWindowDimensions.js
asc-dl-pipeline/webserver/react-web/src/utils/: chunkArray.js  dataMapping.js
asc-dl-pipeline/webserver/react-web/src/views/: LeftView.js  MainView.js  RightView.js
asc-dl-pipeline/webserver/src/selector/: dataSelectors.js
asc-dl-pipeline/webserver/src/utils/: dataHelper.js  dataMapping.js  fileHelper.js  helper.js  pyPath.js  sleep.js  startListener.js  storePid.js
